--- a/index.html
+++ b/index.html
@@ -1,167 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BigFoot Data Insights (Team 9)</title>
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Scrolling Nav CSS -->
-    <link href="css/scrolling-nav.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/styles.css" rel="stylesheet">
-
-</head>
-
-<!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
-
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-
-    <!-- Navigation -->
-    <div id="nav-main">
-    <nav class="navbar mav-main navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-
-            </div>
-
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-              <nav id="nav-wrap">
-                <ul class="nav navbar-nav navbar-custom">
-                    <li class="current"><a class="page-scroll" href="#page-top" style="color:white">Home</a></li>
-                    <li class="hidden"><a class="page-scroll" href="#page-top" style="color:white"></a></li>
-                    <li><a class="page-scroll" href="#about" style="color:#ffffff">About</a></li>
-                    <li><a class="page-scroll" href="#features" style="color:#ffffff">Insights</a></li>
-                    <li><a class="page-scroll" href="../html/d3-examples.html" style="color:#ffffff">Visualizations</a></li>
-                </ul>
-              </nav>
-                <img src="images/usc-primary-logotype.svg" width="176px" height="38px">
-            </div>
-        </div>
-    </nav>
-  </div>
-
-    <!-- Intro Section -->
-    <div>
-        <section id="intro" class="intro-section" style="background-image: url('images/bigfoot_collage.jpg'); opacity: 1.0;background-attachment: fixed; background-size: cover;
-          background-repeat: no-repeat;">
-            <div class="container" style="padding-top:100px">
-                <div class="row">
-                    <div class="col-lg-12" >
-                        <h1 class="title">BigFoot Data Insights</h1>
-                    </div>
-                </div>
-                <!--div class="row" style="padding-top:180px">
-                  <div class="col-md-12">
-                    <a class="btn btn-default btn-lg page-scroll" href="#about" style="margin-top:5%">Learn More</a>
-                  </div>
-                </div-->
-                <div class="row align-items-center" style="padding-top:180px">
-                    <div class="col-md-8 col-sm-12">
-                        <a class="btn btn-default btn-lg page-scroll" href="#about" style="margin-top:5%">Learn More</a>
-                    </div>
-                    <div class="col-md-4 col-sm-12">
-                        <a class="btn btn-default btn-lg page-scroll" href="html/d3-examples.html">Explore Visualizations</a>
-                    </div>
-                </div>
-
-            </div>
-
-        </section>
-    </div>
-
-    <!-- About Section -->
-    <div>
-        <section id="about" class="about-section" style="margin-top:-1%; margin-bottom:5%">
-            <div class="container">
-                <div class="row">
-
-                    <hr class="about-divider">
-                    <h1>About Us</h1>
-                    <hr class="about-divider">
-
-                    <div class="jumbotron" style="margin-bottom:5%; margin-top:3%">
-                        <h2>USC Data Science At Scale Spring 2024, Team 9</h2>
-                        <p class="lead text-left" style="margin-top:2%">We are a team of six USC Data Science Graduate Students who have worked on the Bigfoot Field Researchers Organization (BFRO) dataset thoughout the Spring 2024 semester to add relevant features, cluster, and analyze bigfoot sightings across the US.</p>
-                        <p class="lead text-left">This website contains five interactive visualizations we made using D3.js to showcase some central findings of our dataset.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
-
-<!-- Features Section -->
-    <div>
-        <section id="features" class="features-section" style="margin-top:-1%; margin-bottom:5%">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <hr class="featurette-divider">
-                        <h1>Insights</h1>
-                        <hr class="featurette-divider">
-                    </div>
-
-
-                    <!--D3.js Feature-->
-                    <hr class="featurette-divider">
-                    <div class="row featurette" style="margin-top:3%; margin-bottom:3%">
-                        <div class="col-md-7 col-md-push-5">
-                          <h2 align=left class="featurette-heading"><a href="https://d3js.org/">D3.js</a>. <span class="text-muted">See for yourself.</span></h2>
-                          <p align=left class="lead"> <a href="html/d3-examples.html"> View some of our visualizations. </a> </p>
-                        </div>
-                        <div class="col-md-5 col-md-pull-7">
-                          <img class="featurette-image img-responsive center-block" src="images/d3_feature.png" alt="Generic placeholder image">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
-
-
-            </div>
-				<div class="col-lg-12" style="margin-top:5%;" >
-                  <h3 align=center>Credits</h3>
-                  <hr class="featurette-divider">
-                  <div class="row">
-                  <p>Dr. Chris Mattmann - <a href="http://sunset.usc.edu/~mattmann/">Visit his website</a></p>
-                  <p>CS599 Spring 2018 Class - <a href="http://irds.usc.edu/classes/cs599_2018a/">Visit the class website</a></p>
-				</div>
-            </div>
-			</div>
-        </section>
-    </div>
-
-
-    <hr class="featurette-divider">
-    <div>
-        <div class="container">
-            <footer>
-                <p align=center>©USC DSCI 550: Data Science at Scale, Spring 2024, Team 9</p>
-            </footer>
-        </div>
-    </div>
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Scrolling Nav JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/scrolling-nav.js"></script>
-    <script src="js/cardpanel.js"></script>
-</body>
-
-</html>
+hello
