--- a/DSCI550_BF_Web/index.html
+++ b/DSCI550_BF_Web/index.html
@@ -42,7 +42,7 @@
                     <li class="hidden"><a class="page-scroll" href="#page-top" style="color:white"></a></li>
                     <li><a class="page-scroll" href="#about" style="color:#ffffff">About</a></li>
                     <li><a class="page-scroll" href="#features" style="color:#ffffff">Insights</a></li>
-                    <li><a class="page-scroll" href="../html/d3-examples.html" style="color:#ffffff">Visualizations</a></li>
+                    <li><a class="page-scroll" href="html/d3-examples.html" style="color:#ffffff">Visualizations</a></li>
                 </ul>
               </nav>
                 <img src="images/usc-primary-logotype.svg" width="176px" height="38px">
