--- a/DSCI550_BF_Web/html/d3-examples.html
+++ b/DSCI550_BF_Web/html/d3-examples.html
@@ -110,9 +110,12 @@
                    <div class="col-sm-6 col-md-4">
                         <div class="thumbnail">
                             <div class="caption">
-                                <h3>Visualization 4</h3>
+                                <h3>Map</h3>
                                 <p></p>
-                                <p><a href class="btn btn-primary" role="button">View</a>
+                                <p><a href="../html/visualization_4.html" class="btn btn-primary" role="button">
+                                    <img src="../images/viz4thumb.png" style="height: 200px; width: 400px; object-fit: cover;">
+                                    View
+                                </a></p>
                             </div>
                         </div>
                     </div>
@@ -120,9 +123,12 @@
                    <div class="col-sm-6 col-md-4">
                         <div class="thumbnail">
                             <div class="caption">
-                                <h3>Visualization 5</h3>
+                                <h3>Map</h3>
                                 <p></p>
-                                <p><a href class="btn btn-primary" role="button">View</a>
+                                <p><a href="../html/visualization_5.html" class="btn btn-primary" role="button">
+                                    <img src="../images/viz5thumb.png" style="height: 200px; width: 400px; object-fit: cover;">
+                                    View
+                                </a></p>
                             </div>
                         </div>
                     </div>
