--- a/DSCI550_BF_Web/html/visualization_5.html
+++ b/DSCI550_BF_Web/html/visualization_5.html
@@ -1,16 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
+    <!--meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WordCloud</title>
+    <title>D3.js Line Chart</title>
+    <script src="https://d3js.org/d3.v7.min.js"></script-->
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>D3.js Line Chart</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Scrolling Nav CSS -->
+    <link href="../css/scrolling-nav.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="../css/styles.css" rel="stylesheet">
+    <script src="../js/jquery.js"></script>
+    <!-- D3.js -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 
-<body>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-    <div id="wordcloud"></div>
+
+<!-- Header -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand page-scroll" href="../index.html#page-top" style="color:white">Home</a>
+        </div>
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav navbar-custom">
+                <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                <li class="hidden"><a class="page-scroll" href="../index.html#page-top" style="color:white"></a></li>
+                <li><a class="page-scroll" href="../index.html#about" style="color:#ffffff">About</a></li>
+                <li><a class="page-scroll" href="../index.html#features" style="color:#ffffff">Insights</a></li>
+                <li><a class="page-scroll" href="../index.html#search" style="color:#ffffff">Search</a></li>
+                <li><a class="page-scroll" href="../html/d3-examples.html" style="color:#ffffff">Visualizations</a></li>
+            </ul>
+            <a href="http://usc.edu" class="pull-right">
+              <img src="../images/usc-primary-logotype.svg" width="176px" height="38px"></img>
+            </a>
+
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+
+<!-- Navigation -->
+Navigation -->
+    <div id="secondary-header"> </div>
+    <div class="container" style="margin-bottom: 2%">
+    <ul class="nav nav-tabs" id="tabs" style="margin-top:7%">
+        <li class="active"><a href="#mime-viz" data-toggle="tab">D3.js Line Chart</a></li>
+    </ul>
+    </div>
+	<div class="container" id="vis2" style="padding-bottom: 10%">
+    <!-- Description -->
+    <h1>Nearest National Park Visitation Count For Hotspots vs. Non-Hotspots Over Time</h1>
+    <br>
+    <p>Click on median, mean, min, or max to view each value by year for nearest national park visitation counts to bigfoot sightings that took place in locations that are considered BigFoot Hotspots whereas those who were not considered hotspots.</p>
+    <p>The default display value is the median. Hover over each line to display the exact vistation count and year value at that point.</p>
+
+    <div id="chart-container"></div>
+
+    <div id="buttons">
+        <button id="median-btn">Median</button>
+        <button id="mean-btn">Mean</button>
+        <button id="min-btn">Min</button>
+        <button id="max-btn">Max</button>
+    </div>
 
     <script>
       
@@ -1119,7 +1187,7 @@
             });
 
     </script>
-
+    </div>
 </body>
-
 </html>
+
