--- a/DSCI550_BF_Web/html/visualization_5.html
+++ b/DSCI550_BF_Web/html/visualization_5.html
@@ -61,28 +61,15 @@ Navigation -->
     <div id="secondary-header"> </div>
     <div class="container" style="margin-bottom: 2%">
     <ul class="nav nav-tabs" id="tabs" style="margin-top:7%">
-        <li class="active"><a href="#mime-viz" data-toggle="tab">D3.js Line Chart</a></li>
+        <li class="active"><a href="#mime-viz" data-toggle="tab">D3.js WordCloud</a></li>
     </ul>
     </div>
-	<div class="container" id="vis2" style="padding-bottom: 10%">
+	<div class="container" id="vis5" style="padding-bottom: 10%">
     <!-- Description -->
-    <h1>Nearest National Park Visitation Count For Hotspots vs. Non-Hotspots Over Time</h1>
+    <h1>Secret</h1>
     <br>
-    <p>Click on median, mean, min, or max to view each value by year for nearest national park visitation counts to bigfoot sightings that took place in locations that are considered BigFoot Hotspots whereas those who were not considered hotspots.</p>
-    <p>The default display value is the median. Hover over each line to display the exact vistation count and year value at that point.</p>
-
-    <div id="chart-container"></div>
-
-    <div id="buttons">
-        <button id="median-btn">Median</button>
-        <button id="mean-btn">Mean</button>
-        <button id="min-btn">Min</button>
-        <button id="max-btn">Max</button>
-    </div>
-
+    <p>I am empty.</p>
     <script>
-      
-
         var words = [["bfro",
             4389], ["followup",
             15247], ["report",
