--- a/DSCI550_BF_Web/html/visualization_4.html
+++ b/DSCI550_BF_Web/html/visualization_4.html
@@ -63,10 +63,12 @@
 	<div class="container" id="vis4" style="padding-bottom: 10%">
         
         <!-- VISUALIZATION START -->
-		<h1>Number of Bigfoot sightings per county</h1>
+		<h1>Number of Bigfoot Sightings per County and State during various Seasons</h1>
 		<br>
-		<p>Hovering through a circle shows the state and county in belongs, and the number of bigfoot sightings in the area.</p>
-		<p>The larger the circle, the more occurrence number of sightings in that county. </p>
+		<p>There are 3 levels of nested circles.</p>
+		<p>The outermost circles are the seasons, within them are states containing smaller circles for counties.</p>
+		<p>Clicking on th circles will magnify and highlight the various circles nested within it.</p>
+		<p>The size of the circles represent the number of Bigfoot sightings which have been reported.</p>
 		<div id="observablehq-chart-cf2872da"></div>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 		<script type="module">
