--- a/DSCI550_BF_Web/html/d3-examples.html
+++ b/DSCI550_BF_Web/html/d3-examples.html
@@ -110,10 +110,10 @@
                    <div class="col-sm-6 col-md-4">
                         <div class="thumbnail">
                             <div class="caption">
-                                <h3>Map</h3>
+                                <h3>Zoom Bubbles</h3>
                                 <p></p>
                                 <p><a href="../html/visualization_4.html" class="btn btn-primary" role="button">
-                                    <img src="../images/viz4thumb.png" style="height: 200px; width: 400px; object-fit: cover;">
+                                    <img src="../images/vis4thumb.png" style="height: 200px; width: 400px; object-fit: cover;">
                                     View
                                 </a></p>
                             </div>
@@ -126,7 +126,7 @@
                                 <h3>Map</h3>
                                 <p></p>
                                 <p><a href="../html/visualization_5.html" class="btn btn-primary" role="button">
-                                    <img src="../images/viz5thumb.png" style="height: 200px; width: 400px; object-fit: cover;">
+                                    <img src="../images/vis5thumb.png" style="height: 200px; width: 400px; object-fit: cover;">
                                     View
                                 </a></p>
                             </div>
