--- a/DSCI550_BF_Web/html/visualization_5.html
+++ b/DSCI550_BF_Web/html/visualization_5.html
@@ -57,7 +57,7 @@
     <div id="secondary-header"> </div>
     <div class="container" style="margin-bottom: 2%">
     <ul class="nav nav-tabs" id="tabs" style="margin-top:10%">
-        <li class="active"><a href="#mime-viz" data-toggle="tab">D3.js Bubble Chart</a></li>
+        <li class="active"><a href="#mime-viz" data-toggle="tab">D3.js WordCloud</a></li>
     </ul>
     </div>
 	<div class="container" id="vis2" style="padding-bottom: 10%">
