--- a/DSCI550_BF_Web/html/d3-examples.html
+++ b/DSCI550_BF_Web/html/d3-examples.html
@@ -123,7 +123,7 @@
                    <div class="col-sm-6 col-md-4">
                         <div class="thumbnail">
                             <div class="caption">
-                                <h3>Map</h3>
+                                <h3>WordCloud</h3>
                                 <p></p>
                                 <p><a href="../html/visualization_5.html" class="btn btn-primary" role="button">
                                     <img src="../images/vis5thumb.png" style="height: 200px; width: 400px; object-fit: cover;">
