--- a/DSCI550_BF_Web/html/visualization_5.html
+++ b/DSCI550_BF_Web/html/visualization_5.html
@@ -4,23 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>D3.js Bubble Chart</title>
-
+    <title>BigFoot Data Insights (Team 9)</title>
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Scrolling Nav CSS -->
     <link href="../css/scrolling-nav.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="../css/styles.css" rel="stylesheet">
     <script src="../js/jquery.js"></script>
-    <!-- D3.js -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
-
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-
-
 <!-- Header -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
@@ -44,86 +37,25 @@
             <a href="http://usc.edu" class="pull-right">
               <img src="../images/usc-primary-logotype.svg" width="176px" height="38px"></img>
             </a>
-
         </div>
         <!-- /.navbar-collapse -->
     </div>
     <!-- /.container -->
 </nav>
-
 <!-- Navigation -->
-Navigation -->
     <div id="secondary-header"> </div>
     <div class="container" style="margin-bottom: 2%">
-    <ul class="nav nav-tabs" id="tabs" style="margin-top:7%">
+    <ul class="nav nav-tabs" id="tabs" style="margin-top:10%">
         <li class="active"><a href="#mime-viz" data-toggle="tab">D3.js Bubble Chart</a></li>
+        <li class="active"><a href="#mime-viz" data-toggle="tab">D3.js WordCloud</a></li>
     </ul>
     </div>
 	<div class="container" id="vis2" style="padding-bottom: 10%">
-    <!-- Description -->
-    <h1>Detected Objects Bubble Chart</h1>
-    <br>
-    <p>This is a bubble chart indicating the frequency of entities appearing in the "detected objects", based on reporters' description and AI identification. The sizes of the bubbles are positively correlated to the counts of entities, which are categorized into five groups: Nature, Creature, Vehicle, Tool, Other. The corresponding group will pop out when clicking on the tab.</p>
-
-    <div id="chart-container"></div>
-
-
-
-<!--DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Bubble Chart with Categories</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <style>
-        .bubble {
-            stroke: #000;
-            stroke-width: 1px;
-        }
-        text {
-            font-size: 10px;
-            text-anchor: middle;
-            font-weight: bold;
-            fill: black;
-        }
-        .tab {
-            padding: 10px;
-            cursor: pointer;
-            background-color: #eee;
-            display: inline-block;
-        }
-        .tab:hover {
-            background-color: #ddd;
-        }
-        .active-tab {
-            background-color: #ccc;
-        }
-    </style>
-</head>
-<body-->
-        <style>
-    /* Style the tabs to look like buttons */
-    .tab {
-        display: inline-block;
-        padding: 10px 20px;
-        border: 1px solid #ccc;
-        background-color: #f9f9f9;
-        cursor: pointer;
-        border-radius: 4px;
-        margin-right: 5px; /* Adjust as needed */
-    }
-
-    /* Style the active tab differently */
-    .active-tab {
-        background-color: #007bff;
-        color: #fff;
-    }
-</style>
-
-<div id="chart"></div>
         
         <!-- VISUALIZATION START -->
+		    <h1>Secret5</h1>
+		    <br>
+		    <p>I am empty.</p>
 		    <script>
 			var words = [["bfro",
 			    4389], ["followup",
@@ -1227,9 +1159,7 @@ Navigation -->
 				d3.select(this).style("fill", function (d, i) { return color(i); }) 
 				    .text(originalText); 
 			    });
-
-</script>
+    </script>
     </div>
 </body>
 </html>
-
