--- a/DSCI550_BF_Web/html/visualization_5.html
+++ b/DSCI550_BF_Web/html/visualization_5.html
@@ -46,16 +46,15 @@
     <div id="secondary-header"> </div>
     <div class="container" style="margin-bottom: 2%">
     <ul class="nav nav-tabs" id="tabs" style="margin-top:10%">
-        <li class="active"><a href="#mime-viz" data-toggle="tab">D3.js Bubble Chart</a></li>
         <li class="active"><a href="#mime-viz" data-toggle="tab">D3.js WordCloud</a></li>
     </ul>
     </div>
-	<div class="container" id="vis2" style="padding-bottom: 10%">
+	<div class="container" id="vis5" style="padding-bottom: 10%">
         
         <!-- VISUALIZATION START -->
 		    <h1>Secret5</h1>
 		    <br>
-		    <p>I am empty.</p>
+		    <p>I am empty 5.</p>
 		    <script>
 			var words = [["bfro",
 			    4389], ["followup",
