--- a/DSCI550_BF_Web/index.html
+++ b/DSCI550_BF_Web/index.html
@@ -135,7 +135,7 @@
                   <hr class="featurette-divider">
                   <div class="row">
                   <p>Dr. Chris Mattmann - <a href="http://sunset.usc.edu/~mattmann/">Visit his website</a></p>
-                  <p>DSCI550 Fall 2024 Class - Team 9</p>
+                  <p>DSCI550</p>
 				</div>
             </div>
 			</div>
