--- a/DSCI550_BF_Web/html/visualization_2.html
+++ b/DSCI550_BF_Web/html/visualization_2.html
@@ -65,7 +65,7 @@
         <!-- VISUALIZATION START -->
 		<h1>Number of Bigfoot sightings per county</h1>
 		<br>
-		<p>Hovering through a circle shows the state and county in belongs, and the number of bigfoot sightings in the area.</p>
+		<p>Hovering over a circle shows the state and county it belongs to, and the number of bigfoot sightings in the area.</p>
 		<p>The larger the circle, the more occurrence number of sightings in that county. </p>
 		<p>IMPORTANT: The interactivity of this page might not work due to specific browser extensions in MacOS. </p>
 		<div id="observablehq-chart-e5d36a5a" style="border: thin solid black"></div>
