--- a/DSCI550_BF_Web/html/visualization_1.html
+++ b/DSCI550_BF_Web/html/visualization_1.html
@@ -64,11 +64,11 @@ Navigation -->
         <li class="active"><a href="#mime-viz" data-toggle="tab">D3.js Line Chart</a></li>
     </ul>
     </div>
-	<div class="container" id="vis1" style="padding-bottom: 10%">
+	<div class="container" id="vis2" style="padding-bottom: 10%">
     <!-- Description -->
     <h1>Nearest National Park Visitation Count For Hotspots vs. Non-Hotspots Over Time</h1>
     <br>
-    <p>Click on median, mean, min, or max to view each value by year for nearest national park visitation counts to bigfoot sightings that took place in locations that are considered BigFoot Hotspots whereas those who were not considered hotspots.</p>
+    <p>Click on median, mean, min, or max to view each value by year for the nearest national park visitation counts for bigfoot sightings that took place in locations that are considered BigFoot Hotspots whereas those who were not considered hotspots.</p>
     <p>The default display value is the median. Hover over each line to display the exact vistation count and year value at that point.</p>
 
     <div id="chart-container"></div>
